# poetry-python-version

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/poetry_python_version/: __init__.py  plugins.py
